tweak stage sizes, fix contrast in open props demo

--- a/src/components/open-props-demo/open-props-demo.module.scss
+++ b/src/components/open-props-demo/open-props-demo.module.scss
@@ -1,5 +1,5 @@
 @import 'open-props/normalize.min.css';
-@import 'open-props/open-props.min.css'; 
+@import 'open-props/open-props.min.css';
 
 .card {
   align-items: center;
@@ -9,7 +9,7 @@
   gap: var(--size-4);
   padding: var(--size-4);
   background: var(--gradient-17);
-  color: var(--gray-5);
+  color: var(--gray-2);
 }
 
 .card date {
